--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.9"
 Django = "^4.0.4"
 django-widget-tweaks = "^1.4.12"
 gunicorn = "^20.1.0"
+psycopg2-binary = "^2.9.3"
+django-heroku = "^0.3.1"
 
 [tool.poetry.dev-dependencies]
 
